@@ -7,6 +7,7 @@ Version 1.4.3 - CVS
   - Fix form functions default parameter.
   - Disabled Korean extra functions, because they don't provide all required
     options and message composition is broken.
+  - Added Basque translation.
 
 
 Version 1.4.3-RC1 - 10 May 2004
